--- a/novaembed.ui
+++ b/novaembed.ui
@@ -133679,7 +133679,7 @@ a PCAP or an external RT touch</string>
         <x>10</x>
         <y>10</y>
         <width>631</width>
-        <height>301</height>
+        <height>371</height>
        </rect>
       </property>
       <property name="frameShape">
@@ -133691,9 +133691,9 @@ a PCAP or an external RT touch</string>
       <widget class="QPushButton" name="ExtFS_CheckAvailable_FS_pushButton">
        <property name="geometry">
         <rect>
-         <x>10</x>
+         <x>210</x>
          <y>30</y>
-         <width>611</width>
+         <width>211</width>
          <height>21</height>
         </rect>
        </property>
@@ -133709,41 +133709,18 @@ a PCAP or an external RT touch</string>
       <widget class="QComboBox" name="ExtFS_Available_comboBox">
        <property name="geometry">
         <rect>
-         <x>100</x>
+         <x>150</x>
          <y>60</y>
-         <width>521</width>
+         <width>471</width>
          <height>21</height>
         </rect>
-       </property>
-      </widget>
-      <widget class="QLabel" name="label_127">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>60</y>
-         <width>91</width>
-         <height>20</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <weight>50</weight>
-         <italic>true</italic>
-         <bold>false</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string> File System</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
        </property>
       </widget>
       <widget class="QPushButton" name="ExtFS_DownloadSelected_FS_pushButton">
        <property name="geometry">
         <rect>
          <x>250</x>
-         <y>270</y>
+         <y>340</y>
          <width>121</width>
          <height>21</height>
         </rect>
@@ -133824,9 +133801,9 @@ a PCAP or an external RT touch</string>
       <widget class="QLineEdit" name="ExtFSName_lineEdit">
        <property name="geometry">
         <rect>
-         <x>100</x>
+         <x>150</x>
          <y>90</y>
-         <width>521</width>
+         <width>471</width>
          <height>21</height>
         </rect>
        </property>
@@ -133834,9 +133811,9 @@ a PCAP or an external RT touch</string>
       <widget class="QLineEdit" name="ExtFSFileName_lineEdit">
        <property name="geometry">
         <rect>
-         <x>100</x>
+         <x>150</x>
          <y>120</y>
-         <width>521</width>
+         <width>471</width>
          <height>21</height>
         </rect>
        </property>
@@ -133844,7 +133821,7 @@ a PCAP or an external RT touch</string>
       <widget class="QLineEdit" name="ExtFSVersion_lineEdit">
        <property name="geometry">
         <rect>
-         <x>100</x>
+         <x>150</x>
          <y>180</y>
          <width>111</width>
          <height>21</height>
@@ -133854,9 +133831,9 @@ a PCAP or an external RT touch</string>
       <widget class="QLineEdit" name="ExtFSBoard_lineEdit">
        <property name="geometry">
         <rect>
-         <x>100</x>
+         <x>150</x>
          <y>210</y>
-         <width>521</width>
+         <width>471</width>
          <height>21</height>
         </rect>
        </property>
@@ -133903,9 +133880,9 @@ a PCAP or an external RT touch</string>
       <widget class="QLineEdit" name="ExtFSuSDsize_lineEdit">
        <property name="geometry">
         <rect>
-         <x>100</x>
+         <x>150</x>
          <y>240</y>
-         <width>41</width>
+         <width>31</width>
          <height>21</height>
         </rect>
        </property>
@@ -133929,7 +133906,7 @@ a PCAP or an external RT touch</string>
       <widget class="QLineEdit" name="ExtFSFileSize_lineEdit">
        <property name="geometry">
         <rect>
-         <x>100</x>
+         <x>150</x>
          <y>150</y>
          <width>111</width>
          <height>21</height>
@@ -133942,7 +133919,7 @@ a PCAP or an external RT touch</string>
        </property>
        <property name="geometry">
         <rect>
-         <x>150</x>
+         <x>290</x>
          <y>240</y>
          <width>91</width>
          <height>16</height>
@@ -133958,14 +133935,82 @@ a PCAP or an external RT touch</string>
        </property>
        <property name="geometry">
         <rect>
-         <x>230</x>
+         <x>270</x>
          <y>150</y>
          <width>221</width>
          <height>16</height>
         </rect>
        </property>
        <property name="text">
-        <string/>
+        <string>GB</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_45">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>270</y>
+         <width>121</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>First Boot User</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="ExtFSFirstBootUser_lineEdit">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>270</y>
+         <width>151</width>
+         <height>21</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_46">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>300</y>
+         <width>121</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>First Boot Password</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="ExtFSFirstBootPassword_lineEdit">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>300</y>
+         <width>151</width>
+         <height>21</height>
+        </rect>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_47">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>60</y>
+         <width>81</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>File System</string>
        </property>
       </widget>
      </widget>
