--- a/novaembed.ui
+++ b/novaembed.ui
@@ -93154,6 +93154,58 @@ a PCAP or an external RT touch</string>
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
+      <widget class="QCheckBox" name="M7_WiFi_checkbox">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>30</y>
+         <width>101</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>WiFi Enable</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="M7_Bt_checkbox">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>360</x>
+         <y>30</y>
+         <width>131</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+         <weight>50</weight>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Bluetooth Enable</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
      </widget>
      <widget class="QFrame" name="frame_77">
       <property name="geometry">
@@ -132661,9 +132713,9 @@ a PCAP or an external RT touch</string>
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>320</y>
+        <y>300</y>
         <width>561</width>
-        <height>81</height>
+        <height>101</height>
        </rect>
       </property>
       <property name="font">
@@ -132703,7 +132755,7 @@ a PCAP or an external RT touch</string>
       <widget class="QCheckBox" name="M9_SPDIF_checkBox">
        <property name="geometry">
         <rect>
-         <x>260</x>
+         <x>270</x>
          <y>30</y>
          <width>61</width>
          <height>21</height>
@@ -132783,7 +132835,7 @@ a PCAP or an external RT touch</string>
       <widget class="QCheckBox" name="M9_PCM_checkBox">
        <property name="geometry">
         <rect>
-         <x>260</x>
+         <x>270</x>
          <y>50</y>
          <width>91</width>
          <height>21</height>
@@ -132800,6 +132852,58 @@ a PCAP or an external RT touch</string>
         <string>PCM Port</string>
        </property>
       </widget>
+      <widget class="QCheckBox" name="M9_Bt_checkbox">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>270</x>
+         <y>70</y>
+         <width>161</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Bluetooth Enable</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="M9_WiFi_checkbox">
+       <property name="enabled">
+        <bool>true</bool>
+       </property>
+       <property name="geometry">
+        <rect>
+         <x>160</x>
+         <y>70</y>
+         <width>101</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>9</pointsize>
+         <weight>75</weight>
+         <bold>true</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>WiFi Enable</string>
+       </property>
+       <property name="checked">
+        <bool>true</bool>
+       </property>
+      </widget>
      </widget>
      <widget class="QFrame" name="frame_87">
       <property name="geometry">
@@ -132807,7 +132911,7 @@ a PCAP or an external RT touch</string>
         <x>10</x>
         <y>170</y>
         <width>561</width>
-        <height>141</height>
+        <height>121</height>
        </rect>
       </property>
       <property name="font">
