--- a/novaembed.ui
+++ b/novaembed.ui
@@ -667,7 +667,7 @@
        <property name="geometry">
         <rect>
          <x>10</x>
-         <y>100</y>
+         <y>80</y>
          <width>121</width>
          <height>21</height>
         </rect>
@@ -785,7 +785,7 @@
        <property name="geometry">
         <rect>
          <x>200</x>
-         <y>100</y>
+         <y>80</y>
          <width>101</width>
          <height>21</height>
         </rect>
@@ -797,6 +797,27 @@
        </property>
        <property name="text">
         <string>Force Clone</string>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="SkipModuleBuild_checkBox">
+       <property name="geometry">
+        <rect>
+         <x>200</x>
+         <y>100</y>
+         <width>141</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <italic>true</italic>
+        </font>
+       </property>
+       <property name="text">
+        <string>Skip modules build</string>
        </property>
        <property name="checked">
         <bool>false</bool>
